examples/test/testpolicy802.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy802
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key43: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value16
          key24: value6
      podSelector:
        matchLabels:
          key26: value3
          key47: value10
          key8: value31
